--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "export": "next export"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^4.3.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "next": "15.3.2",
