--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-pdf/renderer": "^4.3.0",
     "html2canvas": "^1.4.1",
+    "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.1",
     "next": "15.3.2",
     "react": "^19.0.0",
